# netgrow

./: Cargo.toml  README.md
docs/: FEATURE_BACKLOG.md
src/: config.rs  main.rs  render.rs  routing.rs  theme.rs  util.rs  world.rs
src/world/: cascade.rs  config.rs  events.rs  mod.rs  packets.rs  roles.rs  spawn.rs  tests.rs  types.rs  virus.rs
themes/: aretha-dark.toml  catppuccin-mocha.toml  dracula.toml  gruvbox.toml  nord.toml  solarized-dark.toml
